--- a/app.json
+++ b/app.json
@@ -22,6 +22,13 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "te": "Supermarket",
+      "sco": "black",
+      "eas": {
+        "projectId": "07813e5c-f7f5-4fae-a00a-2d664f37e4ef"
+      }
     }
   }
 }
