--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
       "favicon": "./assets/favicon.png"
     },
     "extra": {
-      "te": "Healthy",
+      "te": "dental_instruments",
       "sco": "black",
       "eas": {
         "projectId": "07813e5c-f7f5-4fae-a00a-2d664f37e4ef"
