--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "expo": "~51.0.28",
+    "expo-device": "^6.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-tracking-transparency": "^4.0.2",
+    "expo-updates": "^0.25.25",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "^4.11.0",
